# yet-another-c-template

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  COPYING  HACKING.md  ListOfTools.txt  Makefile  Makehelp  README.md  RunAllMakeCommands
.github/workflows/: ci.yml
cmake/: coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  folders.cmake  functions.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  macros.cmake  spell-targets.cmake  spell.cmake  variables.cmake
include/gcd/: gcd.h
include/isprime/: isprime.h
include/vector/: vector.h
source/libs/GCDUtilities/: gcd.c
source/libs/PrimalityUtilities/: isprime.c
test/: CMakeLists.txt
test/cmake/: tests.cmake
test/source/: test_isprime.c  test_vector.c
